added auth, book list
