# app/Http/Controllers/User/UserBookController.php
@@ -1,0 +1,91 @@
+<?php
+
+namespace App\Http\Controllers\User;
+
+use App\Http\Controllers\Controller;
+use App\Http\Resources\Book\BookCollection;
+use App\Services\User\UserBookService;
+use Illuminate\Http\JsonResponse;
+use Illuminate\Http\Request;
+
+class UserBookController extends Controller
+{
+    private UserBookService $userBookService;
+
+    /**
+     * @param UserBookService $userBookService
+     */
+    public function __construct(UserBookService $userBookService)
+    {
+        $this->userBookService = $userBookService;
+    }
+
+    /**
+     * Display a listing of the resource.
+     *
+     * @param Request $request
+     *
+     * @return JsonResponse
+     */
+    public function getList(Request $request): JsonResponse
+    {
+        $list = $this->userBookService->getUserBookList($request);
+        return $this->responseSuccess(new BookCollection($list));
+    }
+
+    /**
+     * Store a newly created resource in storage.
+     *
+     * @param  \Illuminate\Http\Request  $request
+     * @return \Illuminate\Http\Response
+     */
+    public function store(Request $request)
+    {
+        //
+    }
+
+    /**
+     * Display the specified resource.
+     *
+     * @param  int  $id
+     * @return \Illuminate\Http\Response
+     */
+    public function show($id)
+    {
+        //
+    }
+
+    /**
+     * Show the form for editing the specified resource.
+     *
+     * @param  int  $id
+     * @return \Illuminate\Http\Response
+     */
+    public function edit($id)
+    {
+        //
+    }
+
+    /**
+     * Update the specified resource in storage.
+     *
+     * @param  \Illuminate\Http\Request  $request
+     * @param  int  $id
+     * @return \Illuminate\Http\Response
+     */
+    public function update(Request $request, $id)
+    {
+        //
+    }
+
+    /**
+     * Remove the specified resource from storage.
+     *
+     * @param  int  $id
+     * @return \Illuminate\Http\Response
+     */
+    public function destroy($id)
+    {
+        //
+    }
+}
